--- a/src/src/html/index.html
+++ b/src/src/html/index.html
@@ -1,29 +1,4 @@
-<!doctype html>
-<html lang="en-us">
-
-    <head>
-
-        <!-- Meta -->
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-
-        <title>Chippewa</title>
-        <meta name="description" content="">
-
-        <!-- The compiled CSS file -->
-        <link rel="stylesheet" href="css/production.css">
-
-        <!-- Web fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
-
-        <!-- favicon.ico. Place these in the root directory. -->
-        <link rel="shortcut icon" href="favicon.ico">
-
-    </head>
-
-    <body class="has-animations">
-
+@@include("partials/head.html")
 
     <!-- Header -->
     <header class="pt2 pb1 align--center">
@@ -80,12 +55,4 @@
     </main>
 
 
-    <!-- Scroll reveal -->
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-
-    <!-- The compiled JavaScript file -->
-    <script src="js/production.js"></script>
-
-    </body>
-</html>
-
+@@include("partials/foot.html")
