fixed typos added medium

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- Header -->
     <header class="pt2 pb1 align--center">
         <div class="container">
-            <p>Welcome to </p>
+            <p>Welcome to the homepage</p>
+            <p>of</p>
             <h1 title="Rosario De Chiara"><img class="logo" src="/img/logo.svg" alt="Rosario De Chiara"></h1>
         </div>
     </header>
@@ -49,8 +50,11 @@
                 <div class="grid-column span-half pt3 pb3 mobile-m order-2">
                     <h3>Hello, world!</h3>
                     <p>
-                        I have a long lasting passion for technology. I am retroprogrammer and a retrogamer. I do love distributed
-                        systems, parallel programming, in particular I define myself a scalability evangelist. 
+                        I have a long lasting passion for technology. I am retroprogrammer and a retrogamer. 
+                    </p>
+                    <p>
+                        I do love distributed systems, parallel programming, in particular 
+                        I define myself a scalability evangelist. 
                     </p>
                 </div>
 
@@ -72,6 +76,8 @@
                         <li class="mr1"><a href="https://www.instagram.com/rosdec" class="link"><img class="icon" src="/img/instagram.svg" alt="Instagram"></a></li>
                         <li class="mr1"><a href="skype:rosdec?call" class="link"><img class="icon" src="/img/skype.svg" alt="Skype"></a></li>
                         <li class="mr1"><a href="mailto:rosario@dechiara.eu" class="link"><img class="icon" src="/img/mail.svg" alt="Mail"></a></li>
+                        <li class="mr1"><a href="https://medium.com/@rosdec"><img class="icon" src="/img/medium.svg" alt="Medium"></a></li>
+               
                     </ul>
                 </div>
             </div>
