--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
 
             <!-- Info -->
             <section class="grid-row grid-row--center">
-                <!-- Cabin -->
+
                 <div class="grid-column span-half pt3 pb3 mobile-m order-1 reveal-on-scroll is-revealing">
                     <div class="relative">
                         <img class="info-image relative z2" src="/img/io.jpg" alt="Me">
+                        <div class="pattern pattern--left-down absolute z1"></div>
                     </div>
                 </div>
                 <div class="grid-column span-half pt3 pb3 mobile-m order-2">
