--- a/index.html
+++ b/index.html
@@ -1,111 +1,71 @@
 <!doctype html>
-<html lang="en-us">
+<html>
 
-    <head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Rosario De Chiara - Homepage</title>
 
-        <!-- Meta -->
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/pygment_trac.css">
+  <meta name="viewport" content="width=device-width">
+  <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
 
-        <title>Rosario De Chiara - Homepage</title>
-        <meta name="description" content="">
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Rosario De Chiara</h1>
+      <img src="/io.jpg" alt="It's me!" />
+      <ul>
+        <li><a href="https://scholar.google.it/citations?hl=en&user=MpAxe2EAAAAJ" target="_blank">Read my<strong>Publications</strong></a></li>
+        <li><a href="https://blog.logrocket.com/author/rosariodechiara/" target="_blank">Visit my<strong>Blog</strong></a></li>
+        <li><a href="https://github.com/rosdec" target="_blank">Enjoy my <strong>GitHub</strong></a>
+      </ul>
+    </header>
+    <section>
+      <p>I have a long lasting passion for technology. I am retroprogrammer and a retrogamer.
+        I do love distributed systems, parallel programming, in particular I define myself a scalability evangelist.</p>
 
-        <!-- The compiled CSS file -->
-        <link rel="stylesheet" href="css/production.css">
+      <p>I currently work at <a href="http://www.poste.it" target="_blank">Poste Italiane</a> as Innovation Manager.</p>
 
-        <!-- Web fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+      <p>I love writing of technology related topics: you can read my <a href="https://www.linkedin.com/in/rosdec"
+          target="_blank">Medium articles</a> and, most importantly, my <a
+          href="https://blog.logrocket.com/author/rosariodechiara/"  target="_blank">Logrocket Blog posts</a>.</p>
 
-        <!-- favicon.ico. Place these in the root directory. -->
-        <link rel="shortcut icon" href="favicon.ico">
+      <p>I used to work as Post-doc at <a href="http://www.isislab.it"  target="_blank">ISISLab</a> at <a
+          href="http://www.unisa.it"  target="_blank">Università degli Studi di Salerno</a>, also I used to publish way more than now;
+        following a list of my publications.</p>
 
-    </head>
+      <h2>My publications</h2>
+      <p><iframe
+        src="https://docs.google.com/spreadsheets/d/1nzH-YRtDvAZ78ScHSQlTIqPIOdNqA8VZTFp1EVE41HA/gviz/tq?tqx=out:html&tq&"
+        style="border: 0ch; width: 100%;"></iframe>
 
-    <body class="has-animations">
+      </p>
 
+      <h2>My links</h2>
 
-<!-- Header -->
-<header class="pt2 pb1 align--center">
-    <div class="container">
-        <p>Welcome to the homepage</p>
-        <p>of</p>
-        <h1 title="Rosario De Chiara"><img class="logo" src="/img/logo.svg" alt="Rosario De Chiara"></h1>
-    </div>
-</header>
+      <p>Following you find all my social network links:</p>
+      <ul>
+        <li class="mr1"><a href="https://www.linkedin.com/in/rosdec"  target="_blank">Linkedin</a></li>
+        <li class="mr1"><a href="https://www.facebook.com/rosdec"  target="_blank">Facebook</a></li>
+        <li class="mr1"><a href="https://www.twitter.com/rosdec"  target="_blank">Twitter</a></li>
+        <li class="mr1"><a href="https://www.instagram.com/rosdec"  target="_blank">Instagram</a></li>
+        <li class="mr1"><a href="skype:rosdec?call"  target="_blank">Skype</a></li>
+        <li class="mr1"><a href="mailto:rosario@dechiara.eu"  target="_blank">Mail</a></li>
+        <li class="mr1"><a href="https://medium.com/@rosdec">Medium</a></li>
+      </ul>
 
-<!-- Body -->
-<main>
-
-    <div class="container">
-
-        <!-- Info -->
-        <section class="grid-row grid-row--center">
-            <div class="grid-column span-half pt3 pb3 mobile-m order-1">
-                <div class="relative">
-                    <img class="info-image relative z2" src="./img/io.jpg" alt="Cabin">
-                    <div class="pattern pattern--left-down absolute z1"></div>
-                </div>
-            </div>
-            <div class="grid-column span-half pt3 pb3 mobile-m order-2">
-                <h3>Hello, world!</h3>
-                <p>
-                    I have a long lasting passion for technology. I am retroprogrammer and a retrogamer.
-                    <br>
-                    I do love distributed systems, parallel programming, in particular I define myself a scalability
-                    evangelist.
-                </p>
-            </div>
-        </section>
-        <section class="grid-row grid-row--center">
-            <div class="grid-column span-half pt3 pb3 mobile-m order-2">
-                <h3>Virus spreading</h3>
-                <p>
-                    Check out my small <a href="https://ccl.northwestern.edu/netlogo/">Netlogo</a><br/>Agent Based Simulation.
-                    <br><br>
-                    Will the total lockdown work to contain the virus? How a partial lockdown handle the infection spreading?
-                    Check your hyphotesis with this <br/><a href="./virus.html">toy-simulation</a>!
-                </p>
-            </div>
-            <div class="grid-column span-half pt3 pb3 mobile-m order-1">
-                <div class="relative">
-                    <a href="./virus.html">
-                    <img class="info-image relative z2" src="./img/virus.png" alt="Cabin">
-                    </a>                        
-                </div>
-            </div>
-        </section>
-    </div>
-
-    <!-- Contact -->
-    <section class="bg--secondary-color pt3 pb1">
-        <div class="container">
-            <div class="mb2 align--center">
-                <h3 class="mb1">Contact me</h3>
-                <p>I do reply to emails</p>
-
-                <ul class="no-bullets list--inline mt1">
-                    <li class="mr1"><a href="https://www.linkedin.com/in/rosdec" class="link"><img class="icon" src="/img/linkedin.svg" alt="Linkedin"></a></li>
-                    <li class="mr1"><a href="https://www.facebook.com/rosdec" class="link"><img class="icon" src="/img/facebook.svg" alt="Facebook"></a></li>
-                    <li class="mr1"><a href="https://www.twitter.com/rosdec" class="link"><img class="icon" src="/img/twitter.svg" alt="Twitter"></a></li>
-                    <li class="mr1"><a href="https://www.instagram.com/rosdec" class="link"><img class="icon" src="/img/instagram.svg" alt="Instagram"></a></li>
-                    <li class="mr1"><a href="skype:rosdec?call" class="link"><img class="icon" src="/img/skype.svg" alt="Skype"></a></li>
-                    <li class="mr1"><a href="mailto:rosario@dechiara.eu" class="link"><img class="icon" src="/img/mail.svg" alt="Mail"></a></li>
-                    <li class="mr1"><a href="https://medium.com/@rosdec"><img class="icon" src="/img/medium.svg" alt="Medium"></a></li>
-
-                </ul>
-            </div>
-        </div>
     </section>
+    <footer>
+      <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
+      </p>
+    </footer>
+  </div>
+  <script src="js/scale.fix.js"></script>
+</body>
 
-</main>
-
-
-    <!-- Scroll reveal -->
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-
-    <!-- The compiled JavaScript file -->
-    <script src="js/production.js"></script>
-
-    </body>
 </html>
