--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       <h1>Rosario De Chiara</h1>
       <img src="/io.jpg" alt="It's me!" />
       <ul>
-        <li><a href="https://scholar.google.it/citations?hl=en&user=MpAxe2EAAAAJ" target="_blank">Read my<strong>Publications</strong></a></li>
-        <li><a href="https://blog.logrocket.com/author/rosariodechiara/" target="_blank">Visit my<strong>Blog</strong></a></li>
+        <li><a href="https://scholar.google.it/citations?hl=en&user=MpAxe2EAAAAJ" target="_blank">Read
+            my<strong>Publications</strong></a></li>
+        <li><a href="https://blog.logrocket.com/author/rosariodechiara/" target="_blank">Visit
+            my<strong>Blog</strong></a></li>
         <li><a href="https://github.com/rosdec" target="_blank">Enjoy my <strong>GitHub</strong></a>
       </ul>
     </header>
@@ -31,18 +33,19 @@
 
       <p>I currently work at <a href="http://www.poste.it" target="_blank">Poste Italiane</a> as Innovation Manager.</p>
 
-      <p>I love writing of technology related topics: you can read my <a href="https://www.linkedin.com/in/rosdec"
+      <p>I love writing of technology related topics: you can read my <a href="https://rosdec.medium.com/"
           target="_blank">Medium articles</a> and, most importantly, my <a
-          href="https://blog.logrocket.com/author/rosariodechiara/"  target="_blank">Logrocket Blog posts</a>.</p>
-
-      <p>I used to work as Post-doc at <a href="http://www.isislab.it"  target="_blank">ISISLab</a> at <a
-          href="http://www.unisa.it"  target="_blank">Università degli Studi di Salerno</a>, also I used to publish way more than now;
+          href="https://blog.logrocket.com/author/rosariodechiara/" target="_blank">Logrocket Blog posts</a>.</p>
+      <p><img src="https://github-readme-stats.vercel.app/api?username=rosdec&hide=contribs,prs" /></p>
+      <p>I used to work as Post-doc at <a href="http://www.isislab.it" target="_blank">ISISLab</a> at <a
+          href="http://www.unisa.it" target="_blank">Università degli Studi di Salerno</a>, also I used to publish way
+        more than now;
         following a list of my publications.</p>
 
       <h2>My publications</h2>
       <p><iframe
-        src="https://docs.google.com/spreadsheets/d/1nzH-YRtDvAZ78ScHSQlTIqPIOdNqA8VZTFp1EVE41HA/gviz/tq?tqx=out:html&tq&"
-        style="border: 0ch; width: 100%;"></iframe>
+          src="https://docs.google.com/spreadsheets/d/1nzH-YRtDvAZ78ScHSQlTIqPIOdNqA8VZTFp1EVE41HA/gviz/tq?tqx=out:html&tq&"
+          style="border: 0ch; width: 100%;"></iframe>
 
       </p>
 
@@ -50,12 +53,12 @@
 
       <p>Following you find all my social network links:</p>
       <ul>
-        <li class="mr1"><a href="https://www.linkedin.com/in/rosdec"  target="_blank">Linkedin</a></li>
-        <li class="mr1"><a href="https://www.facebook.com/rosdec"  target="_blank">Facebook</a></li>
-        <li class="mr1"><a href="https://www.twitter.com/rosdec"  target="_blank">Twitter</a></li>
-        <li class="mr1"><a href="https://www.instagram.com/rosdec"  target="_blank">Instagram</a></li>
-        <li class="mr1"><a href="skype:rosdec?call"  target="_blank">Skype</a></li>
-        <li class="mr1"><a href="mailto:rosario@dechiara.eu"  target="_blank">Mail</a></li>
+        <li class="mr1"><a href="https://www.linkedin.com/in/rosdec" target="_blank">Linkedin</a></li>
+        <li class="mr1"><a href="https://www.facebook.com/rosdec" target="_blank">Facebook</a></li>
+        <li class="mr1"><a href="https://www.twitter.com/rosdec" target="_blank">Twitter</a></li>
+        <li class="mr1"><a href="https://www.instagram.com/rosdec" target="_blank">Instagram</a></li>
+        <li class="mr1"><a href="skype:rosdec?call" target="_blank">Skype</a></li>
+        <li class="mr1"><a href="mailto:rosario@dechiara.eu" target="_blank">Mail</a></li>
         <li class="mr1"><a href="https://medium.com/@rosdec">Medium</a></li>
       </ul>
 
